...
                            <constraint firstItem="eIK-Km-LOY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IX3-cD-Vgt"/>
                            <constraint firstItem="eIK-Km-LOY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yva-XC-xFp"/>
                            <constraint firstAttribute="trailing" secondItem="eIK-Km-LOY" secondAttribute="trailing" id="gwu-gB-uDj"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eIK-Km-LOY" secondAttribute="bottom" id="ksB-jf-51M"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Cart" id="AKl-uq-Yca">
                        <barButtonItem key="leftBarButtonItem" title="Setting" id="EtV-cv-Hf4">
                            <connections>
                                <action selector="settingPressed:" destination="BYZ-38-t0r" id="Xt6-R4-o65"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Checkout" id="i77-76-L2J">
                            <connections>
                                <action selector="checkoutPressed:" destination="BYZ-38-t0r" id="4Ye-ow-b87"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="s0S-pH-bKh">
                                                <rect key="frame" x="8" y="37" width="359" height="29"/>
                                                <segments>
                                                    <segment title="Normal"/>
                                                    <segment title="1-Click"/>
                                                    <segment title="2-Clicks"/>
                                                </segments>
                                                <connections>
                                                    <action selector="paymentTypeSegmentChanged:" destination="iQs-OU-mo2" eventType="valueChanged" id="J7X-NK-AO5"/>
                                                </connections>
                                            </segmentedControl>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Look" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDe-Ee-f85">
...
                                                <connections>
                                                    <action selector="saveCardSwitchChanged:" destination="iQs-OU-mo2" eventType="valueChanged" id="QLV-PO-MRe"/>
                                                </connections>
                                            </switch>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFa-lT-UFn">
                                                <rect key="frame" x="251" y="272" width="116" height="35"/>
                                                <accessibility key="accessibilityConfiguration" identifier="acquiring_bank" label="Acquiring Bank"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="fWb-Yj-uID"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Acquiring Bank">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <constraint firstItem="Hf3-qO-oEe" firstAttribute="top" secondItem="4UV-KP-D36" secondAttribute="bottom" id="HKR-0u-G0u"/>
                            <constraint firstItem="Hf3-qO-oEe" firstAttribute="leading" secondItem="8ae-kk-T4N" secondAttribute="leading" id="LPT-Ar-dGh"/>
                            <constraint firstAttribute="trailing" secondItem="Hf3-qO-oEe" secondAttribute="trailing" id="Y4e-ib-hFe"/>
                            <constraint firstItem="1ZR-DU-BaF" firstAttribute="top" secondItem="Hf3-qO-oEe" secondAttribute="bottom" id="coB-YJ-RIa"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Customer Details" id="VD5-s8-do6">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="04g-n1-JuK">
                            <connections>
                                <action selector="savePressed:" destination="iQs-OU-mo2" id="cDu-gc-244"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
...
