...
                                        <constraint firstItem="9eO-MS-A71" firstAttribute="height" secondItem="SZx-vb-Nch" secondAttribute="height" constant="-20" id="MYw-pb-jQJ"/>
                                        <constraint firstAttribute="trailing" secondItem="Zx1-o7-sA4" secondAttribute="trailing" constant="8" id="Rt9-8O-ix5"/>
                                        <constraint firstAttribute="bottom" secondItem="9eO-MS-A71" secondAttribute="bottom" constant="10" id="dRL-6o-liv"/>
                                        <constraint firstItem="9eO-MS-A71" firstAttribute="leading" secondItem="SZx-vb-Nch" secondAttribute="leading" constant="8" id="jV0-rh-cFy"/>
                                    </constraints>
                                </view>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Card Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UXS-76-jqp" customClass="MidtransUITextField">
                                    <rect key="frame" x="15" y="69" width="290" height="55"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="55" id="3jF-nK-LoE"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="underlined" value="YES"/>
                                        <userDefinedRuntimeAttribute type="number" keyPath="textRightPadding">
                                            <real key="value" value="30"/>
                                        </userDefinedRuntimeAttribute>
                                    </userDefinedRuntimeAttributes>
                                </textField>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Expiry Date (mm/yy)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Bd-E9-a7J" customClass="MidtransUITextField">
                                    <rect key="frame" x="15" y="129" width="175" height="55"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="underlined" value="YES"/>
                                    </userDefinedRuntimeAttributes>
                                </textField>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CVV" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Nn-gz-tW4" customClass="MidtransUITextField">
                                    <rect key="frame" x="205" y="129" width="100" height="55"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="100" id="hmI-zz-IJ3"/>
                                        <constraint firstAttribute="height" constant="55" id="wUO-jY-oFV"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                    <rect key="frame" x="8" y="520" width="304" height="40"/>
                    <color key="backgroundColor" red="0.098039215690000001" green="0.63921568630000003" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="HcA-dN-EEZ"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="20"/>
                    <state key="normal" title="Finish Payment"/>
                    <connections>
                        <action selector="registerPressed:" destination="-1" eventType="touchUpInside" id="Kw1-U4-fAq"/>
                    </connections>
                </button>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m7b-l4-Xll" customClass="MIdtransUIBorderedView">
                    <rect key="frame" x="0.0" y="468" width="320" height="44"/>
...
