...
@end

@implementation UIFlowSampleViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Choose your payment mode";
    self.sampleList = @[@"Normal Payment",@"Specific Payment",@"Payment With Limit Time",@"Custom Theme",@"Custom Field"];
    [self.tableView reloadData];
    // Do any additional setup after loading the view from its nib.
    
    [[MidtransNetworkLogger shared] startLogging];
}

...
